# TDengine

./: CMakeLists.txt
plugins/incremental_bitmap/: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  cleanup_summary.md  contribution_strategy.md  integration_guide.md  optimized_contribution_strategy.md  run_real_tests.sh  run_tests.sh  setup_tdengine_test.sh  simulate_ci.sh  test_verify_fixes.sh
plugins/incremental_bitmap/.github/workflows/: ci.yml
plugins/incremental_bitmap/docs/: TDengine_Logical_Backup_Test_Specification.md  retry_and_error_handling.md
plugins/incremental_bitmap/include/: backup_coordinator.h  event_interceptor.h  skiplist.h  storage_engine_interface.h  taosx_integration.h
plugins/incremental_bitmap/src/: backup_coordinator.c  bitmap_engine.c  event_interceptor.c  incremental_backup_tool.c  mock_storage_engine.c  ring_buffer.c  roaring_bitmap.c  simple_bitmap.c  skiplist.c  storage_engine_interface.c  tdengine_storage_engine.c
plugins/incremental_bitmap/test/: pitr_e2e_test.c  test_backup_coordinator.c  test_e2e_tdengine_real.c  test_event_interceptor.c  test_pitr_e2e.c  test_ring_buffer.c  test_skiplist.c  test_state_transitions.c
